dropdown added ot feature1

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p>This is a new repo</p>
-<p>the new feture is add to feature1 branch</p>
+<p>the new feture is add to feature1 branch (dropdown) </p>
